chore(backend): add and fix tests, fix sonar issues